# lopputyo

./: CMakeLists.txt  README.md
backends/: CMakeLists.txt
sources/: Hotel.cpp  Hotel.h  HotelManager.cpp  HotelManager.h  QuestionHelper.h  Sql.h  SqlManager.cpp  SqlManager.h  Utils.h  main.cpp
